--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "id": "8dfb0cfc-95a1-4e7f-942b-643fe63b7cdf",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "id": "3e59a4f8-7bc9-4fb1-b0a9-6864e4331854",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "id": "ac89388b-a65f-4e0d-933d-09f99460f5eb",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "id": "0c4d9c35-8d9c-4c55-980d-2a24f13612e5",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "(4803, 20)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "097f84a1-5e43-4b99-9404-31b56d2c6cfc",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "(4803, 4)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "id": "5b58fc67-7175-4432-bd8d-10658f6e7318",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "id": "5ee3038a-9999-4d52-a3d3-f25a4b807be6",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "id": "2f3b623a-22bf-440d-8860-8ef14b889458",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "id": "fb980fcd-4cff-4f6a-912c-703f85c5c2e8",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "[0 rows x 23 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "id": "0ebbaa1c-808b-4eec-b2d4-1731b9a42514",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "992aa33f-0f7a-4a7f-a5d2-dbf560a480ce",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "id": "6676c0a4-982c-450d-bf18-b06297dd933f",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "id": "5329f65c-8f6b-46c3-a885-96b82c1a9b76",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "id": "993f74fc-5a80-4c0e-bf82-30d4b095f000",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "id": "9aa96793-2498-46f3-999e-ac182b859256",
    "metadata": {},
    "outputs": [],
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "id": "c3069230-8bc5-4469-8a32-4f1326ef54ae",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "id": "5de19d5f-3987-4736-aa7b-fdb7a9d90357",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_6328\\187566251.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_4848\\187566251.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "id": "35cb6e63-aa58-4d5b-a4e7-73963737f74a",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "id": "caf7a198-c269-4e4c-92e6-0f5d8547e7b5",
    "metadata": {},
    "outputs": [
@@ -695,7 +695,7 @@
        "1  [{\"credit_id\": \"52fe4232c3a36847f800b579\", \"de...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 73,
    "id": "266c356e-a8fd-403d-b26c-318c493b2ec2",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "id": "05e28db8-f23f-4a2d-944a-b80764d05f70",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "'[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
+   "id": "a12704ff-d91c-4119-99b0-0afb808c9693",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 28, 'name': 'Action'},\n",
+       " {'id': 12, 'name': 'Adventure'},\n",
+       " {'id': 14, 'name': 'Fantasy'},\n",
+       " {'id': 878, 'name': 'Science Fiction'}]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "ast.literal_eval('[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "id": "3e11261f-cb14-49df-82f9-ff026431def6",
    "metadata": {},
    "outputs": [],
@@ -779,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 77,
    "id": "3ba19eb9-2e13-4ba3-92e2-1ce0d28d1ce2",
    "metadata": {},
    "outputs": [
@@ -789,7 +814,7 @@
        "['Action', 'Adventure', 'Fantasy', 'Science Fiction']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,33 +825,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "a12704ff-d91c-4119-99b0-0afb808c9693",
+   "execution_count": 78,
+   "id": "8c28b267-394c-4345-841e-3a3eeca7bc48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data = imp_fea_data.copy()\n",
+    "imp_fea_data['genres'] = imp_fea_data['genres'].apply(convert)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "a8d75828-6100-4dcb-b447-833630afb519",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
+       "      <td>[{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>[{\"name\": \"Ingenious Film Partners\", \"id\": 289...</td>\n",
+       "      <td>[{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...</td>\n",
+       "      <td>[{\"credit_id\": \"52fe48009251416c750aca23\", \"de...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{'id': 28, 'name': 'Action'},\n",
-       " {'id': 12, 'name': 'Adventure'},\n",
-       " {'id': 14, 'name': 'Fantasy'},\n",
-       " {'id': 878, 'name': 'Science Fiction'}]"
+       "      id                                         genres  \\\n",
+       "0  19995  [Action, Adventure, Fantasy, Science Fiction]   \n",
+       "\n",
+       "                                            keywords   title  \\\n",
+       "0  [{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...  Avatar   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  In the 22nd century, a paraplegic Marine is di...   \n",
+       "\n",
+       "                                production_companies  \\\n",
+       "0  [{\"name\": \"Ingenious Film Partners\", \"id\": 289...   \n",
+       "\n",
+       "                                                cast  \\\n",
+       "0  [{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...   \n",
+       "\n",
+       "                                                crew  \n",
+       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import ast\n",
-    "ast.literal_eval('[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]')"
+    "imp_fea_data.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "ba7f8449-532d-4c14-a85f-c5b04092d68f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\": 2964, \"name\": \"future\"}, {\"id\": 3386, \"name\": \"space war\"}, {\"id\": 3388, \"name\": \"space colony\"}, {\"id\": 3679, \"name\": \"society\"}, {\"id\": 3801, \"name\": \"space travel\"}, {\"id\": 9685, \"name\": \"futuristic\"}, {\"id\": 9840, \"name\": \"romance\"}, {\"id\": 9882, \"name\": \"space\"}, {\"id\": 9951, \"name\": \"alien\"}, {\"id\": 10148, \"name\": \"tribe\"}, {\"id\": 10158, \"name\": \"alien planet\"}, {\"id\": 10987, \"name\": \"cgi\"}, {\"id\": 11399, \"name\": \"marine\"}, {\"id\": 13065, \"name\": \"soldier\"}, {\"id\": 14643, \"name\": \"battle\"}, {\"id\": 14720, \"name\": \"love affair\"}, {\"id\": 165431, \"name\": \"anti war\"}, {\"id\": 193554, \"name\": \"power relations\"}, {\"id\": 206690, \"name\": \"mind and soul\"}, {\"id\": 209714, \"name\": \"3d\"}]'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.iloc[0,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "208e4ef3-d051-4ecb-a414-3afca0cf7037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data['keywords'] = imp_fea_data['keywords'].apply(convert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "eea7e0f4-4c01-4c59-96d8-1d8a5653c417",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
+       "      <td>[culture clash, future, space war, space colon...</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>[{\"name\": \"Ingenious Film Partners\", \"id\": 289...</td>\n",
+       "      <td>[{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...</td>\n",
+       "      <td>[{\"credit_id\": \"52fe48009251416c750aca23\", \"de...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                         genres  \\\n",
+       "0  19995  [Action, Adventure, Fantasy, Science Fiction]   \n",
+       "\n",
+       "                                            keywords   title  \\\n",
+       "0  [culture clash, future, space war, space colon...  Avatar   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  In the 22nd century, a paraplegic Marine is di...   \n",
+       "\n",
+       "                                production_companies  \\\n",
+       "0  [{\"name\": \"Ingenious Film Partners\", \"id\": 289...   \n",
+       "\n",
+       "                                                cast  \\\n",
+       "0  [{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...   \n",
+       "\n",
+       "                                                crew  \n",
+       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "a4d104b1-731c-473e-ab16-7a9622c46c93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['culture clash',\n",
+       " 'future',\n",
+       " 'space war',\n",
+       " 'space colony',\n",
+       " 'society',\n",
+       " 'space travel',\n",
+       " 'futuristic',\n",
+       " 'romance',\n",
+       " 'space',\n",
+       " 'alien',\n",
+       " 'tribe',\n",
+       " 'alien planet',\n",
+       " 'cgi',\n",
+       " 'marine',\n",
+       " 'soldier',\n",
+       " 'battle',\n",
+       " 'love affair',\n",
+       " 'anti war',\n",
+       " 'power relations',\n",
+       " 'mind and soul',\n",
+       " '3d']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.iloc[0,2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b7b487-e76d-4ba3-ac53-f6faa7dc2941",
+   "id": "4d48b77e-ea83-4836-8c7a-679e825bbd27",
    "metadata": {},
    "outputs": [],
    "source": []
