--- a/main.ipynb
+++ b/main.ipynb
@@ -1031,49 +1031,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "id": "a4d104b1-731c-473e-ab16-7a9622c46c93",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['culture clash',\n",
-       " 'future',\n",
-       " 'space war',\n",
-       " 'space colony',\n",
-       " 'society',\n",
-       " 'space travel',\n",
-       " 'futuristic',\n",
-       " 'romance',\n",
-       " 'space',\n",
-       " 'alien',\n",
-       " 'tribe',\n",
-       " 'alien planet',\n",
-       " 'cgi',\n",
-       " 'marine',\n",
-       " 'soldier',\n",
-       " 'battle',\n",
-       " 'love affair',\n",
-       " 'anti war',\n",
-       " 'power relations',\n",
-       " 'mind and soul',\n",
-       " '3d']"
+       "'[{\"name\": \"Ingenious Film Partners\", \"id\": 289}, {\"name\": \"Twentieth Century Fox Film Corporation\", \"id\": 306}, {\"name\": \"Dune Entertainment\", \"id\": 444}, {\"name\": \"Lightstorm Entertainment\", \"id\": 574}]'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "imp_fea_data.iloc[0,2]"
+    "imp_fea_data.iloc[0,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "4d48b77e-ea83-4836-8c7a-679e825bbd27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data['production_companies'] = imp_fea_data['production_companies'].apply(convert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "800d2a72-a39e-4c7d-b3da-9a3cc115ddc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert2(obj):\n",
+    "    L = []\n",
+    "    c = 0\n",
+    "    for i in ast.literal_eval(obj):\n",
+    "        L.append(i['name'])\n",
+    "        c += 1\n",
+    "        if c>2:\n",
+    "            break\n",
+    "    return L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "065d7741-28d7-49cf-b5f1-beda70f37a02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sam Worthington', 'Zoe Saldana', 'Sigourney Weaver']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data['cast'].apply(convert2).iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "5089f0e8-0da2-41c7-820f-c011384f8ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data['cast'] = imp_fea_data['cast'].apply(convert2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "8a72dda3-c7d7-41a0-b8e0-96df9d2c71af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
+       "      <td>[culture clash, future, space war, space colon...</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>[Ingenious Film Partners, Twentieth Century Fo...</td>\n",
+       "      <td>[Sam Worthington, Zoe Saldana, Sigourney Weaver]</td>\n",
+       "      <td>[{\"credit_id\": \"52fe48009251416c750aca23\", \"de...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                         genres  \\\n",
+       "0  19995  [Action, Adventure, Fantasy, Science Fiction]   \n",
+       "\n",
+       "                                            keywords   title  \\\n",
+       "0  [culture clash, future, space war, space colon...  Avatar   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  In the 22nd century, a paraplegic Marine is di...   \n",
+       "\n",
+       "                                production_companies  \\\n",
+       "0  [Ingenious Film Partners, Twentieth Century Fo...   \n",
+       "\n",
+       "                                               cast  \\\n",
+       "0  [Sam Worthington, Zoe Saldana, Sigourney Weaver]   \n",
+       "\n",
+       "                                                crew  \n",
+       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "856a8b2f-4e63-4f7b-98b7-9df72628c9eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert3(obj):\n",
+    "    L = []\n",
+    "    for i in ast.literal_eval(obj):\n",
+    "        if i['job'] == 'Director':\n",
+    "            L.append(i['name'])\n",
+    "            break\n",
+    "    return L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "80c73236-ab30-453f-8696-a83e983d1a85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data['crew'] = imp_fea_data['crew'].apply(convert3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "8ef5f72e-d57a-4320-8971-07acfcd7584a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
+       "      <td>[culture clash, future, space war, space colon...</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>[Ingenious Film Partners, Twentieth Century Fo...</td>\n",
+       "      <td>[Sam Worthington, Zoe Saldana, Sigourney Weaver]</td>\n",
+       "      <td>[James Cameron]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                         genres  \\\n",
+       "0  19995  [Action, Adventure, Fantasy, Science Fiction]   \n",
+       "\n",
+       "                                            keywords   title  \\\n",
+       "0  [culture clash, future, space war, space colon...  Avatar   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  In the 22nd century, a paraplegic Marine is di...   \n",
+       "\n",
+       "                                production_companies  \\\n",
+       "0  [Ingenious Film Partners, Twentieth Century Fo...   \n",
+       "\n",
+       "                                               cast             crew  \n",
+       "0  [Sam Worthington, Zoe Saldana, Sigourney Weaver]  [James Cameron]  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "85d7af15-2ade-439c-b137-df7e69e02616",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    In the 22nd century, a paraplegic Marine is di...\n",
+       "Name: overview, dtype: object"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.head(1)['overview']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "b6edf6a9-66ae-4f63-b393-c6a1a9d0ddf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'In the 22nd century, a paraplegic Marine is dispatched to the moon Pandora on a unique mission, but becomes torn between following orders and protecting an alien civilization.'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.iloc[0,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "ddfdf4fe-8c48-4cbf-913e-90a8dc5e4beb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data['overview'] = imp_fea_data['overview'].apply(lambda x:x.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "d97aca86-9e51-4e4e-9cfa-a1e4cbfecd61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
+       "      <td>[culture clash, future, space war, space colon...</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>[In, the, 22nd, century,, a, paraplegic, Marin...</td>\n",
+       "      <td>[Ingenious Film Partners, Twentieth Century Fo...</td>\n",
+       "      <td>[Sam Worthington, Zoe Saldana, Sigourney Weaver]</td>\n",
+       "      <td>[James Cameron]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                         genres  \\\n",
+       "0  19995  [Action, Adventure, Fantasy, Science Fiction]   \n",
+       "\n",
+       "                                            keywords   title  \\\n",
+       "0  [culture clash, future, space war, space colon...  Avatar   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  [In, the, 22nd, century,, a, paraplegic, Marin...   \n",
+       "\n",
+       "                                production_companies  \\\n",
+       "0  [Ingenious Film Partners, Twentieth Century Fo...   \n",
+       "\n",
+       "                                               cast             crew  \n",
+       "0  [Sam Worthington, Zoe Saldana, Sigourney Weaver]  [James Cameron]  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_fea_data.head(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d48b77e-ea83-4836-8c7a-679e825bbd27",
+   "id": "3cd06203-b89a-40de-b74e-f88f5ec4e6ae",
    "metadata": {},
    "outputs": [],
    "source": []
