remove spaces from name

--- a/main.ipynb
+++ b/main.ipynb
@@ -1430,8 +1430,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "3cd06203-b89a-40de-b74e-f88f5ec4e6ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fea_data['genres'] = imp_fea_data['genres'].apply(lambda x : [i.replace(\" \",\"\") for i in x])\n",
+    "imp_fea_data['keywords'] = imp_fea_data['keywords'].apply(lambda x : [i.replace(\" \",\"\") for i in x])\n",
+    "imp_fea_data['production_companies'] = imp_fea_data['production_companies'].apply(lambda x : [i.replace(\" \",\"\") for i in x])\n",
+    "imp_fea_data['cast'] = imp_fea_data['cast'].apply(lambda x : [i.replace(\" \",\"\") for i in x])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5083cd7e-a471-42fd-8783-848beb4590b4",
    "metadata": {},
    "outputs": [],
    "source": []
