apply stemming on tag column

--- a/main.ipynb
+++ b/main.ipynb
@@ -1862,32 +1862,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "c07d267c-eee0-4f8f-b1d7-f91df229b171",
+   "execution_count": 104,
+   "id": "845bc497-6503-4660-b0b5-73f6d4f8d3b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'program program programm program futurist'"
+       "0       action adventur fantasi sciencefict culturecla...\n",
+       "1       adventur fantasi action ocean drugabus exotici...\n",
+       "2       action adventur crime spi basedonnovel secreta...\n",
+       "3       action crime drama thriller dccomic crimefight...\n",
+       "4       action adventur sciencefict basedonnovel mar m...\n",
+       "                              ...                        \n",
+       "4804    action crime thriller unitedstates–mexicobarri...\n",
+       "4805    comedi romanc a newlyw couple' honeymoon is up...\n",
+       "4806    comedi drama romanc tvmovi date loveatfirstsig...\n",
+       "4807    when ambiti new york attorney sam is sent to s...\n",
+       "4808    documentari obsess camcord crush dreamgirl eve...\n",
+       "Name: tag, Length: 4806, dtype: object"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stemming(\"program programs programmer programming futuristic\")"
+    "new_df['tag'].apply(stemming)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "845bc497-6503-4660-b0b5-73f6d4f8d3b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
