apply vectorization on tag column

--- a/main.ipynb
+++ b/main.ipynb
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 106,
    "id": "79a2c2ab-3fb1-4818-b8e0-877df29040f4",
    "metadata": {},
    "outputs": [
@@ -1771,31 +1771,31 @@
        "      <th>0</th>\n",
        "      <td>19995</td>\n",
        "      <td>Avatar</td>\n",
-       "      <td>action adventure fantasy sciencefiction cultur...</td>\n",
+       "      <td>action adventur fantasi sciencefict culturecla...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>285</td>\n",
        "      <td>Pirates of the Caribbean: At World's End</td>\n",
-       "      <td>adventure fantasy action ocean drugabuse exoti...</td>\n",
+       "      <td>adventur fantasi action ocean drugabus exotici...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>206647</td>\n",
        "      <td>Spectre</td>\n",
-       "      <td>action adventure crime spy basedonnovel secret...</td>\n",
+       "      <td>action adventur crime spi basedonnovel secreta...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>49026</td>\n",
        "      <td>The Dark Knight Rises</td>\n",
-       "      <td>action crime drama thriller dccomics crimefigh...</td>\n",
+       "      <td>action crime drama thriller dccomic crimefight...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>49529</td>\n",
        "      <td>John Carter</td>\n",
-       "      <td>action adventure sciencefiction basedonnovel m...</td>\n",
+       "      <td>action adventur sciencefict basedonnovel mar m...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1810,14 +1810,14 @@
        "4   49529                               John Carter   \n",
        "\n",
        "                                                 tag  \n",
-       "0  action adventure fantasy sciencefiction cultur...  \n",
-       "1  adventure fantasy action ocean drugabuse exoti...  \n",
-       "2  action adventure crime spy basedonnovel secret...  \n",
-       "3  action crime drama thriller dccomics crimefigh...  \n",
-       "4  action adventure sciencefiction basedonnovel m...  "
+       "0  action adventur fantasi sciencefict culturecla...  \n",
+       "1  adventur fantasi action ocean drugabus exotici...  \n",
+       "2  action adventur crime spi basedonnovel secreta...  \n",
+       "3  action crime drama thriller dccomic crimefight...  \n",
+       "4  action adventur sciencefict basedonnovel mar m...  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1862,43 +1862,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "id": "845bc497-6503-4660-b0b5-73f6d4f8d3b2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       action adventur fantasi sciencefict culturecla...\n",
-       "1       adventur fantasi action ocean drugabus exotici...\n",
-       "2       action adventur crime spi basedonnovel secreta...\n",
-       "3       action crime drama thriller dccomic crimefight...\n",
-       "4       action adventur sciencefict basedonnovel mar m...\n",
-       "                              ...                        \n",
-       "4804    action crime thriller unitedstates–mexicobarri...\n",
-       "4805    comedi romanc a newlyw couple' honeymoon is up...\n",
-       "4806    comedi drama romanc tvmovi date loveatfirstsig...\n",
-       "4807    when ambiti new york attorney sam is sent to s...\n",
-       "4808    documentari obsess camcord crush dreamgirl eve...\n",
-       "Name: tag, Length: 4806, dtype: object"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_df['tag'].apply(stemming)"
+    "new_df['tag'] = new_df['tag'].apply(stemming)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "395ba34b-a595-4f19-a0f9-dfa65fed23c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "588fe58a-4cde-455d-9732-d9fbf07d1628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = CountVectorizer(max_features=5000 , stop_words='english')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395ba34b-a595-4f19-a0f9-dfa65fed23c0",
+   "id": "79c23fa2-e8f8-4e85-a9fe-6e37a247d8d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vectors = cv.fit_transform(new_df['tag']).toarray()"
+   ]
   }
  ],
  "metadata": {
