--- a/main.ipynb
+++ b/main.ipynb
@@ -568,7 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_13392\\187566251.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_5228\\187566251.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "id": "c2e4d854-70e5-44b2-a5cb-bada0e8c914b",
    "metadata": {},
    "outputs": [],
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "id": "e501696f-5b59-4532-b155-cf57df308a94",
    "metadata": {},
    "outputs": [
@@ -1648,7 +1648,7 @@
        "Name: tag, Length: 4806, dtype: object"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "id": "fb93f6f6-d868-4235-8381-0c0c14da16c7",
    "metadata": {},
    "outputs": [],
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "id": "55dd955f-fb2d-4cc0-979c-e927d2e21227",
    "metadata": {},
    "outputs": [],
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "id": "67710c05-3d80-4db8-b68a-e976b5ba8595",
    "metadata": {},
    "outputs": [
@@ -1725,7 +1725,7 @@
        "0  19995  Avatar  action adventure fantasy sciencefiction cultur..."
       ]
      },
-     "execution_count": 83,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,8 +1736,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 52,
    "id": "79a2c2ab-3fb1-4818-b8e0-877df29040f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>action adventure fantasy sciencefiction cultur...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>285</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>adventure fantasy action ocean drugabuse exoti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>206647</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>action adventure crime spy basedonnovel secret...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49026</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>action crime drama thriller dccomics crimefigh...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49529</td>\n",
+       "      <td>John Carter</td>\n",
+       "      <td>action adventure sciencefiction basedonnovel m...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id                                     title  \\\n",
+       "0   19995                                    Avatar   \n",
+       "1     285  Pirates of the Caribbean: At World's End   \n",
+       "2  206647                                   Spectre   \n",
+       "3   49026                     The Dark Knight Rises   \n",
+       "4   49529                               John Carter   \n",
+       "\n",
+       "                                                 tag  \n",
+       "0  action adventure fantasy sciencefiction cultur...  \n",
+       "1  adventure fantasy action ocean drugabuse exoti...  \n",
+       "2  action adventure crime spy basedonnovel secret...  \n",
+       "3  action crime drama thriller dccomics crimefigh...  \n",
+       "4  action adventure sciencefiction basedonnovel m...  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "533cd65b-948a-4078-a166-4369bfbefb18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem.porter import PorterStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "05a17f44-a045-4a0a-ba94-3519d9bf1f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "aa4598b4-b369-471f-af50-8d1ca6e2ac09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stemming(text):\n",
+    "    s = []\n",
+    "    for i in text.split():\n",
+    "        s.append(ps.stem(i))\n",
+    "    return ' '.join(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "845bc497-6503-4660-b0b5-73f6d4f8d3b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df['tag'] = new_df['tag'].apply(stemming)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "395ba34b-a595-4f19-a0f9-dfa65fed23c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "588fe58a-4cde-455d-9732-d9fbf07d1628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = CountVectorizer(max_features=5000 , stop_words='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "79c23fa2-e8f8-4e85-a9fe-6e37a247d8d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectors = cv.fit_transform(new_df['tag']).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "18773527-c271-4e80-889d-97b194eb2fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['000', '007', '10', '100', '11', '12', '13', '14', '1492pictur',\n",
+       "       '15', '16', '17', '18', '18th', '18thcenturi', '19', '1910',\n",
+       "       '1920', '1930', '1940'], dtype=object)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.get_feature_names_out()[0:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "113b9549-99d2-4c5f-8f1b-bd1ae7afd22a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4806, 5000)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "8c2d5d44-e09e-4c89-b350-e8f62f2cd0a2",
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +2027,7 @@
        "4  action adventur sciencefict basedonnovel mar m...  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1828,77 +2038,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "533cd65b-948a-4078-a166-4369bfbefb18",
+   "execution_count": 75,
+   "id": "34afc569-ed4d-4510-a531-3b9cc18f915a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(3)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from nltk.stem.porter import PorterStemmer"
+    "new_df[new_df['title'] == 'The Dark Knight Rises'].index[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "05a17f44-a045-4a0a-ba94-3519d9bf1f2f",
+   "execution_count": 76,
+   "id": "e27af639-2c0e-4509-b3a3-42b68d87c796",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ps = PorterStemmer()"
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "aa4598b4-b369-471f-af50-8d1ca6e2ac09",
+   "execution_count": 77,
+   "id": "1a0c00d1-0b10-4ccd-a67e-07fb59b0acc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stemming(text):\n",
-    "    s = []\n",
-    "    for i in text.split():\n",
-    "        s.append(ps.stem(i))\n",
-    "    return ' '.join(s)"
+    "similarity = cosine_similarity(vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "845bc497-6503-4660-b0b5-73f6d4f8d3b2",
+   "execution_count": 78,
+   "id": "89a6b7bd-9c9b-4b5d-8398-5b8ef2dff184",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 0.08006408, 0.0836242 , ..., 0.04529108, 0.        ,\n",
+       "       0.        ])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "new_df['tag'] = new_df['tag'].apply(stemming)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "395ba34b-a595-4f19-a0f9-dfa65fed23c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "588fe58a-4cde-455d-9732-d9fbf07d1628",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = CountVectorizer(max_features=5000 , stop_words='english')"
+    "similarity[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c23fa2-e8f8-4e85-a9fe-6e37a247d8d4",
+   "id": "807e4fa2-f3bb-4a23-89b1-9c602646ce4a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "vectors = cv.fit_transform(new_df['tag']).toarray()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
