create main function

--- a/main.ipynb
+++ b/main.ipynb
@@ -568,7 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_5228\\187566251.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_5040\\187566251.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "id": "18773527-c271-4e80-889d-97b194eb2fca",
    "metadata": {},
    "outputs": [
@@ -1914,7 +1914,7 @@
        "       '1920', '1930', '1940'], dtype=object)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1925,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 61,
    "id": "113b9549-99d2-4c5f-8f1b-bd1ae7afd22a",
    "metadata": {},
    "outputs": [
@@ -1935,7 +1935,7 @@
        "(4806, 5000)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 62,
    "id": "8c2d5d44-e09e-4c89-b350-e8f62f2cd0a2",
    "metadata": {},
    "outputs": [
@@ -2027,7 +2027,7 @@
        "4  action adventur sciencefict basedonnovel mar m...  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 63,
    "id": "34afc569-ed4d-4510-a531-3b9cc18f915a",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2048,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 64,
    "id": "e27af639-2c0e-4509-b3a3-42b68d87c796",
    "metadata": {},
    "outputs": [],
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 65,
    "id": "1a0c00d1-0b10-4ccd-a67e-07fb59b0acc2",
    "metadata": {},
    "outputs": [],
@@ -2079,24 +2079,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
+   "id": "2212f25a-f7d8-4aa2-ab25-c89794e4b3dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend(movie):\n",
+    "    movie_index = new_df[new_df['title'] == movie].index[0]\n",
+    "    movie_list = sorted(list(enumerate(similarity[movie_index])),reverse=True , key = lambda x : x[1])[1:6]\n",
+    "    for i in movie_list :\n",
+    "        print(new_df.iloc[i[0]].title)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "9d4017b1-9b7d-4a4d-b84d-329ec34794a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Krrish\n",
+      "Riddick\n",
+      "The Other Side of Heaven\n",
+      "The Legend of Hercules\n",
+      "Get Carter\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend('John Carter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "id": "89a6b7bd-9c9b-4b5d-8398-5b8ef2dff184",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.        , 0.08006408, 0.0836242 , ..., 0.04529108, 0.        ,\n",
-       "       0.        ])"
+       "[(1214, np.float64(0.31433011119429655)),\n",
+       " (2405, np.float64(0.2864459496157732)),\n",
+       " (507, np.float64(0.2710098294963041)),\n",
+       " (539, np.float64(0.2706659809803833)),\n",
+       " (778, np.float64(0.2639435221287502))]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "similarity[0]"
+    "sorted(list(enumerate(similarity[0])),reverse=True , key = lambda x : x[1])[1:6]"
    ]
   },
   {
