create pkl file

--- a/main.ipynb
+++ b/main.ipynb
@@ -2144,8 +2144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "807e4fa2-f3bb-4a23-89b1-9c602646ce4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(new_df.to_dict() , open('movie.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d1e63eb-53cf-4b44-8d1c-938374892b5a",
    "metadata": {},
    "outputs": [],
    "source": []
