receiving list of movies

--- a/main.ipynb
+++ b/main.ipynb
@@ -568,7 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_5040\\187566251.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_19556\\187566251.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 66,
    "id": "2212f25a-f7d8-4aa2-ab25-c89794e4b3dd",
    "metadata": {},
    "outputs": [],
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 67,
    "id": "9d4017b1-9b7d-4a4d-b84d-329ec34794a4",
    "metadata": {},
    "outputs": [
@@ -2119,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "id": "89a6b7bd-9c9b-4b5d-8398-5b8ef2dff184",
    "metadata": {},
    "outputs": [
@@ -2133,7 +2133,7 @@
        " (778, np.float64(0.2639435221287502))]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
    "id": "807e4fa2-f3bb-4a23-89b1-9c602646ce4a",
    "metadata": {},
    "outputs": [],
@@ -2155,8 +2155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "7d1e63eb-53cf-4b44-8d1c-938374892b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(similarity,open('similarity.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0235f36b-9831-4ed6-a0df-d8a864b4b2b4",
    "metadata": {},
    "outputs": [],
    "source": []
