working on showing poster

--- a/main.ipynb
+++ b/main.ipynb
@@ -568,7 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_19556\\187566251.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_13496\\187566251.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "id": "2212f25a-f7d8-4aa2-ab25-c89794e4b3dd",
    "metadata": {},
    "outputs": [],
@@ -2088,6 +2088,7 @@
     "    movie_index = new_df[new_df['title'] == movie].index[0]\n",
     "    movie_list = sorted(list(enumerate(similarity[movie_index])),reverse=True , key = lambda x : x[1])[1:6]\n",
     "    for i in movie_list :\n",
+    "        print(new_df.iloc[i[0]].id)\n",
     "        print(new_df.iloc[i[0]].title)\n",
     "        \n",
     "        \n",
@@ -2097,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "id": "9d4017b1-9b7d-4a4d-b84d-329ec34794a4",
    "metadata": {},
    "outputs": [
@@ -2105,10 +2106,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "32740\n",
       "Krrish\n",
+      "87421\n",
       "Riddick\n",
+      "16651\n",
       "The Other Side of Heaven\n",
+      "188207\n",
       "The Legend of Hercules\n",
+      "10461\n",
       "Get Carter\n"
      ]
     }
